--- a/timeline.html
+++ b/timeline.html
@@ -46,34 +46,19 @@
             align-items: center;
         }
 
-        /* 메인 컨테이너: 5x5 그리드 느낌의 캔버스 */
+        /* 메인 컨테이너 */
         #canvas {
             width: 100%;
             height: 100%;
-            max-width: 800px; /* 적당한 크기 제한 */
+            max-width: 800px;
             max-height: 800px;
             position: relative;
             padding: 40px;
             display: flex;
             flex-wrap: wrap;
-            align-content: center; /* 세로 중앙 정렬 (좌측 중앙 시작 효과) */
-            gap: 40px; /* 요소 간 간격 */
+            align-content: center;
+            gap: 40px;
             overflow-y: auto;
-        }
-
-        /* 타임라인 연결선 (배경) */
-        #canvas::before {
-            content: '';
-            position: absolute;
-            top: 50%;
-            left: 40px;
-            right: 40px;
-            height: 4px;
-            background: #e0e0e0;
-            z-index: 0;
-            transform: translateY(-50%);
-            border-radius: 2px;
-            display: none; /* Flex wrap 구조라 선 연결은 복잡해지므로 숨김/점선으로 대체 가능 */
         }
 
         /* 공통 노드 스타일 */
@@ -141,23 +126,23 @@
             letter-spacing: 1px;
         }
 
-        /* 2. 일반 이벤트 노드 (타원형) */
+        /* 2. 일반 이벤트 노드 */
         .event-node {
             min-width: 140px;
-            height: 90px; /* 타원형 비율 */
+            height: 90px;
             padding: 15px 20px;
             background-color: var(--c-bg);
-            border-radius: 24px; /* 둥근 사각형/타원 느낌 */
+            border-radius: 24px;
             border: 2px solid transparent;
             box-shadow: 0 4px 15px rgba(0,0,0,0.05);
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            margin-top: 15px; /* 시작점과 중앙 정렬 맞추기 위해 */
+            margin-top: 15px;
         }
 
-        /* 특정 테마 (따뜻한 색) */
+        /* 테마 스타일 */
         .theme-warm {
             background-color: var(--c-terra);
             color: #fff;
@@ -166,7 +151,6 @@
         .theme-warm .time-range { color: var(--c-gold); }
         .theme-warm .event-desc { color: #fff; }
 
-        /* 특정 테마 (쿨/네이처) */
         .theme-nature {
             background-color: var(--c-leaf);
             color: #fff;
@@ -174,7 +158,6 @@
         }
         .theme-nature .time-range { color: var(--c-bg); }
 
-        /* 텍스트 스타일 */
         .time-range {
             font-size: 12px;
             font-weight: 600;
@@ -191,31 +174,33 @@
             gap: 6px;
         }
 
-        /* 삭제 버튼 (호버시 등장) */
+        /* 삭제 버튼 - z-index와 클릭 영역 확보 */
         .delete-btn {
             position: absolute;
-            top: -8px;
-            right: -8px;
-            width: 20px;
-            height: 20px;
+            top: -10px;
+            right: -10px;
+            width: 24px;
+            height: 24px;
             background: #ff4d4d;
             color: white;
             border-radius: 50%;
-            font-size: 12px;
+            font-size: 14px;
             display: flex;
             align-items: center;
             justify-content: center;
             cursor: pointer;
             opacity: 0;
-            transition: opacity 0.2s;
+            transition: all 0.2s;
             border: 2px solid #fff;
+            z-index: 10; /* 확실하게 위에 오도록 설정 */
+            box-shadow: 0 2px 5px rgba(0,0,0,0.2);
         }
 
         .event-node:hover .delete-btn {
             opacity: 1;
+            top: -12px; /* 호버 시 살짝 더 올라가서 잘 보이게 */
         }
 
-        /* 입력 컨트롤 (우측 하단 FAB) */
         .fab {
             position: fixed;
             bottom: 30px;
@@ -240,7 +225,7 @@
             background-color: var(--c-leaf);
         }
 
-        /* 입력 모달 */
+        /* 모달 스타일 */
         .modal-overlay {
             position: fixed;
             top: 0; left: 0; width: 100%; height: 100%;
@@ -266,6 +251,13 @@
         .modal h3 {
             color: var(--c-main);
             margin-bottom: 15px;
+        }
+
+        .modal p {
+            margin-bottom: 20px;
+            color: var(--c-subtext);
+            font-size: 14px;
+            line-height: 1.5;
         }
 
         .input-group {
@@ -310,8 +302,8 @@
 
         .btn-cancel { background: #f0f0f0; color: #666; }
         .btn-save { background: var(--c-main); color: white; }
+        .btn-delete { background: #ff4d4d; color: white; }
 
-        /* 안내 텍스트 */
         .helper-text {
             font-size: 11px;
             color: var(--c-terra);
@@ -322,75 +314,96 @@
 </head>
 <body>
 
-    <!-- 타임라인 캔버스 -->
     <div id="canvas">
-        <!-- 시작점 (항상 존재) -->
         <div class="node start-node">
             <span class="time-label">14:00</span>
             <span class="label-text">U-SQUARE</span>
             <span class="sub-text">Start Point</span>
         </div>
-        <!-- 여기에 자바스크립트로 노드들이 추가됩니다 -->
     </div>
 
-    <!-- 입력 버튼 -->
-    <div class="fab" onclick="openModal()">+</div>
+    <div class="fab" onclick="openInputModal()">+</div>
 
     <!-- 입력 모달 -->
-    <div class="modal-overlay" id="modal">
+    <div class="modal-overlay" id="inputModal">
         <div class="modal">
             <h3>새로운 일정 추가</h3>
             <div class="input-group">
-                <!-- 라벨 및 안내 문구 수정 -->
                 <label>일정 입력 (형식: 시간 / 내용)</label>
-                <input type="text" id="eventInput" placeholder="예: 18:00 / 저녁  또는  14:15 ~ 15:30 / 목포행" onkeypress="handleEnter(event)">
+                <input type="text" id="eventInput" placeholder="예: 18:00 / 저녁" onkeypress="handleEnter(event)">
                 <p class="helper-text">시간과 내용은 ' / ' 기호로 구분해주세요.</p>
             </div>
             <div class="modal-actions">
-                <button class="btn-cancel" onclick="closeModal()">취소</button>
+                <button class="btn-cancel" onclick="closeInputModal()">취소</button>
                 <button class="btn-save" onclick="saveEvent()">추가하기</button>
             </div>
         </div>
     </div>
 
+    <!-- 삭제 확인 모달 (새로 추가됨) -->
+    <div class="modal-overlay" id="deleteModal">
+        <div class="modal">
+            <h3>일정 삭제</h3>
+            <p>이 일정을 정말 삭제하시겠습니까?<br>삭제된 내용은 복구할 수 없습니다.</p>
+            <div class="modal-actions">
+                <button class="btn-cancel" onclick="closeDeleteModal()">취소</button>
+                <button class="btn-delete" onclick="confirmDelete()">삭제</button>
+            </div>
+        </div>
+    </div>
+
     <script>
-        // --- 설정 및 상태 관리 ---
         const STORAGE_KEY = 'usquare_timeline_data';
         let events = [];
+        let deleteTargetId = null; // 삭제할 아이디를 임시 저장
 
-        // 색상 팔레트
         const colors = {
-            warm: ['#E07D54', '#FFE1A0'], // 목포행 등 강조
-            nature: ['#5F8575', '#98B092', '#304F6D', '#889BAE'] // 일반
+            nature: ['#5F8575', '#98B092', '#304F6D', '#889BAE']
         };
 
-        // 초기 로드
         window.onload = () => {
             loadEvents();
             render();
         };
 
-        // --- 기능 로직 ---
-
         function loadEvents() {
             const saved = localStorage.getItem(STORAGE_KEY);
-            if (saved) {
-                events = JSON.parse(saved);
-            }
+            if (saved) events = JSON.parse(saved);
         }
 
         function saveToStorage() {
             localStorage.setItem(STORAGE_KEY, JSON.stringify(events));
         }
 
-        function openModal() {
-            document.getElementById('modal').classList.add('open');
+        // --- 입력 모달 관련 ---
+        function openInputModal() {
+            document.getElementById('inputModal').classList.add('open');
             document.getElementById('eventInput').focus();
         }
 
-        function closeModal() {
-            document.getElementById('modal').classList.remove('open');
+        function closeInputModal() {
+            document.getElementById('inputModal').classList.remove('open');
             document.getElementById('eventInput').value = '';
+        }
+
+        // --- 삭제 모달 관련 (수정됨) ---
+        function openDeleteModal(id) {
+            deleteTargetId = id;
+            document.getElementById('deleteModal').classList.add('open');
+        }
+
+        function closeDeleteModal() {
+            deleteTargetId = null;
+            document.getElementById('deleteModal').classList.remove('open');
+        }
+
+        function confirmDelete() {
+            if (deleteTargetId !== null) {
+                events = events.filter(e => e.id !== deleteTargetId);
+                saveToStorage();
+                render();
+            }
+            closeDeleteModal();
         }
 
         function handleEnter(e) {
@@ -401,10 +414,7 @@
             const input = document.getElementById('eventInput').value;
             if (!input.trim()) return;
 
-            // 파싱 로직: "시간 / 내용" 또는 "시간 ~ 시간 / 내용"
-            // 구분자 /, | 등을 허용
             const parts = input.split(/[\/|]/);
-            
             let timeRange = '';
             let content = '';
 
@@ -412,14 +422,10 @@
                 timeRange = parts[0].trim();
                 content = parts[1].trim();
             } else {
-                // 형식이 안 맞으면 (슬래시가 없으면) 일단 전체를 내용으로 보되,
-                // 만약 숫자로 시작하면 사용자가 실수를 한 것일 수 있으므로 시간으로 추측해볼 수도 있음.
-                // 여기서는 안전하게 기존 로직 유지하되, 구분자가 없으면 내용으로 처리.
                 timeRange = 'Time Unset';
                 content = input.trim();
             }
 
-            // 키워드 분석 (이모지 및 테마 자동 적용)
             let emoji = '';
             let theme = 'nature';
 
@@ -453,46 +459,31 @@
             events.push(newEvent);
             saveToStorage();
             render();
-            closeModal();
+            closeInputModal();
         }
 
-        function deleteEvent(id) {
-            if(confirm('이 일정을 삭제하시겠습니까?')) {
-                events = events.filter(e => e.id !== id);
-                saveToStorage();
-                render();
-            }
-        }
-
-        // --- 렌더링 ---
         function render() {
             const canvas = document.getElementById('canvas');
-            // 기존 노드 중 start-node를 제외하고 제거
             const existingNodes = canvas.querySelectorAll('.event-node');
             existingNodes.forEach(node => node.remove());
 
-            // 시간순 정렬
-            // 단순 문자열 비교 시 "18:00"이 "14:00 ~ 15:00"보다 뒤에 오도록 함.
-            // 문자열 비교는 앞에서부터 하므로 "14" vs "18" 비교가 되어 정상 작동함.
             events.sort((a, b) => a.timeRange.localeCompare(b.timeRange));
 
             events.forEach(evt => {
                 const node = document.createElement('div');
                 
-                // 스타일 결정
-                let bg, text, border;
                 if (evt.theme === 'warm') {
                     node.className = 'node event-node theme-warm';
                 } else {
                     node.className = 'node event-node theme-nature';
-                    // 랜덤 배경색 (Nature 테마 내에서)
                     const randomColor = colors.nature[Math.floor(Math.random() * colors.nature.length)];
                     node.style.backgroundColor = randomColor;
                     node.style.borderColor = '#fff';
                 }
 
+                // onclick 이벤트에서 openDeleteModal 호출
                 node.innerHTML = `
-                    <div class="delete-btn" onclick="deleteEvent(${evt.id})">×</div>
+                    <div class="delete-btn" onclick="openDeleteModal(${evt.id})">×</div>
                     <span class="time-range">${evt.timeRange}</span>
                     <span class="event-desc">${evt.emoji} ${evt.content}</span>
                 `;
